RESOLVED FIXED158018
REGRESSION (r196629): Safari can get into a state where switching Reader theme doesn't apply to the webpage
https://bugs.webkit.org/show_bug.cgi?id=158018
Summary REGRESSION (r196629): Safari can get into a state where switching Reader them...
Antti Koivisto
Reported 2016-05-24 02:24:49 PDT
Style resolver is not always restored after tab switch. Without style resolver we don't do style invalidation.
Attachments
patch (1.81 KB, patch)
2016-05-24 03:40 PDT, Antti Koivisto
darin: review+
Antti Koivisto
Comment 1 2016-05-24 02:25:04 PDT
Antti Koivisto
Comment 2 2016-05-24 03:40:08 PDT
Antti Koivisto
Comment 3 2016-05-24 09:47:25 PDT
Note You need to log in before you can comment on or make changes to this bug.